added all features
